--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -28,14 +28,44 @@
     // Array.prototype.some() // is at least one person 19 or older?
     // Array.prototype.every() // is everyone 19 or older?
 
+    const isAdultLongWay = people.some(function(person) {
+      const currYear = new Date().getFullYear();
+      if(currYear - person.year >= 19 ) {
+        return true;
+      };
+    });
+
+    console.log(isAdultLongWay)
+
+    const isAdult = people.some(person => ((new Date()).
+      getFullYear()) - person.year >= 19 );
+
+    console.log(isAdult)
+    
+    const allAdult = people.every(person => ((new Date()).
+      getFullYear()) - person.year >= 19);
+
+    console.log(allAdult)
+
+
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+
+    const selectedComment = comments.find(comment => (comment.id === 823423));
+
+    console.log(selectedComment)
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
 
+    const selectedIndex = comments.findIndex(comment => (comment.id === 823423));
+    console.log(selectedIndex)
+
+    // to delete the index, let's do it immutable
+    const newComments = [...comments.slice(0,selectedIndex), ...comments.slice(selectedIndex+1)];
+    console.table(newComments)
   </script>
 </body>
 </html>
